--- a/css/ets-home.css
+++ b/css/ets-home.css
@@ -2,7 +2,7 @@ body {
     background: url(../img/bg.jpg) no-repeat center;
     background-attachment: fixed;
     height: 100vh;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Microsoft YaHei";
     font-size: 15px;
 }
 
